--- a/datacatalog-dashboard-ui/src/main/webapp/includes/header.html
+++ b/datacatalog-dashboard-ui/src/main/webapp/includes/header.html
@@ -14,4 +14,8 @@
     <script src="js/main.js"></script>
     <script src="js/tool-bar.js"></script>
     <script src="js/crawling-stats.js"></script>
+    <script src="js/lib/json2.js"></script>
+    <script src="js/lib/jquery.tools.min.js"></script>
+    <script src="js/lib/jquery-ui-1.8.16.custom.min.js"></script>
+    <script src="http://static.simile.mit.edu/timeline/api-2.3.0/timeline-api.js" type="text/javascript"></script>
 </head>
